--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,8 @@ jacocoTestReport {
 }
 
 dependencies {
-    testCompile 'junit:junit:4.12'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.5.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-migrationsupport:5.5.1'
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'org.assertj:assertj-core:3.10.0'
     compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
@@ -72,6 +73,10 @@ dependencies {
     testCompile 'org.sonarsource.sonarqube:sonar-plugin-api:7.7'
 
 } 
+
+test {
+    useJUnitPlatform()
+}
 
 license {
     header = rootProject.file('LICENSE')
