--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -26,13 +26,14 @@ only_sonarsource_qa: &ONLY_SONARSOURCE_QA
 
 setup_gradle_cache_template: &SETUP_GRADLE_CACHE
   gradle_cache:
-     folder: .gradle/caches
+     folder: ${GRADLE_USER_HOME}/caches
   create_gradle_directory_script:
     - mkdir -p "${GRADLE_USER_HOME}"
 
 cleanup_gradle_cache_script_template: &CLEANUP_GRADLE_CACHE_SCRIPT
   cleanup_gradle_script:
     - /usr/bin/find "${GRADLE_USER_HOME}/caches/" -name "*.lock" -type f -delete
+    - /usr/bin/find "${GRADLE_USER_HOME}/caches/" -name "cache.properties" -type f -delete
     - rm -rf "${GRADLE_USER_HOME}/caches/journal-1/"
     - rm -rf "${GRADLE_USER_HOME}/caches/build-cache-1/"
 
