Do not promote on external PR

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -79,7 +79,7 @@ plugin_qa_task:
 promote_task:
   depends_on:
     - plugin_qa
-  only_if: $CIRRUS_PR != "" || $CIRRUS_BRANCH == "master" || $CIRRUS_BRANCH =~ "branch-.*"
+  <<: *ONLY_SONARSOURCE_QA
   gke_container:    
     <<: *CONTAINER_DEFINITION
     cpu: 1
