--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -33,7 +33,7 @@ setup_gradle_cache_template: &SETUP_GRADLE_CACHE
 cleanup_gradle_cache_script_template: &CLEANUP_GRADLE_CACHE_SCRIPT
   cleanup_gradle_script:
     - /usr/bin/find "${GRADLE_USER_HOME}/caches/" -name "*.lock" -type f -delete
-    - /usr/bin/find "${GRADLE_USER_HOME}/caches/" -name "cache.properties" -type f -delete
+    - rm -rf "${GRADLE_USER_HOME}/caches/5.4.1/"
     - rm -rf "${GRADLE_USER_HOME}/caches/journal-1/"
     - rm -rf "${GRADLE_USER_HOME}/caches/build-cache-1/"
 
