--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -68,6 +68,7 @@ plugin_qa_task:
     CIRRUS_CLONE_DEPTH: 1
     matrix:
       - SQ_VERSION: LATEST_RELEASE[7.9]
+      - SQ_VERSION: LATEST_RELEASE
       - SQ_VERSION: DOGFOOD
   <<: *SETUP_GRADLE_CACHE
   qa_script:
