--- a/its/build.gradle
+++ b/its/build.gradle
@@ -7,11 +7,11 @@ description = 'SonarQube JaCoCo :: Integration Tests'
 dependencies {
   testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
   testImplementation 'org.junit.jupiter:junit-jupiter-migrationsupport:5.6.2'
-  testCompile 'org.mockito:mockito-core:1.10.19'
-  testCompile 'org.assertj:assertj-core:3.10.0'
-  testCompile 'org.sonarsource.orchestrator:sonar-orchestrator:3.35.1.2719'
-  testCompile 'org.sonarsource.sonarqube:sonar-ws:6.7'
-  testCompile 'com.google.code.findbugs:jsr305:2.0.2'
+  testImplementation 'org.mockito:mockito-core:1.10.19'
+  testImplementation 'org.assertj:assertj-core:3.10.0'
+  testImplementation 'org.sonarsource.orchestrator:sonar-orchestrator:3.35.1.2719'
+  testImplementation 'org.sonarsource.sonarqube:sonar-ws:6.7'
+  testImplementation 'com.google.code.findbugs:jsr305:2.0.2'
 }
 
 test {
