Ignore test configurations

--- a/wss-unified-agent.config
+++ b/wss-unified-agent.config
@@ -5,6 +5,7 @@ resolveAllDependencies=False
 gradle.aggregateModules=True
 gradle.preferredEnvironment=wrapper
 gradle.resolveDependencies=True
+gradle.ignoredConfigurations=test.*
 
 maven.aggregateModules=False
 maven.downloadMissingDependencies=False
