--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -92,9 +92,9 @@ plugin_qa_task:
   env:
     CIRRUS_CLONE_DEPTH: 1
     matrix:
-      - SQ_VERSION: LATEST_RELEASE[7.9]
+      - SQ_VERSION: LATEST_RELEASE[8.9]
       - SQ_VERSION: LATEST_RELEASE
-      - SQ_VERSION: DOGFOOD
+      - SQ_VERSION: DEV
   <<: *SETUP_GRADLE_CACHE
   qa_script:
     - source cirrus-env QA
