--- a/build.gradle
+++ b/build.gradle
@@ -82,7 +82,7 @@ test {
 }
 
 license {
-    header = rootProject.file('LICENSE')
+    header = rootProject.file('LICENSE_HEADER')
     ext.year = Calendar.getInstance().get(Calendar.YEAR)
     strictCheck true
     mapping {
