--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -16,7 +16,7 @@ env:
   GRADLE_USER_HOME: ${CIRRUS_WORKING_DIR}/.gradle
 
 container_definition: &CONTAINER_DEFINITION
-  image: eu.gcr.io/release-engineering-ci-prod/base:j11-g6.8.3-latest
+  image: eu.gcr.io/release-engineering-ci-prod/base:j11-latest
   cluster_name: cirrus-ci
   zone: europe-west4-b
   namespace: default
