--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -118,7 +118,4 @@ promote_task:
     GITHUB_TOKEN: VAULT[development/github/token/${CIRRUS_REPO_OWNER}-${CIRRUS_REPO_NAME}-promotion token]
     #artifacts that will have downloadable links in burgr
     ARTIFACTS: org.sonarsource.jacoco:sonar-jacoco-plugin:jar
-  script:
-    - source cirrus-env PROMOTE
-    - cirrus_jfrog_promote
-    - ./cirrus/burgr_promote.sh
+  script: cirrus_promote_gradle
