--- a/.github/workflows/releasability.yaml
+++ b/.github/workflows/releasability.yaml
@@ -9,6 +9,7 @@ jobs:
     name: Releasability status
     permissions:
       id-token: write
+      statuses: write
       contents: read
     steps:
       - uses: SonarSource/gh-action_releasability/releasability-status@v2
