--- a/build.gradle
+++ b/build.gradle
@@ -57,9 +57,9 @@ sonarqube {
 
 jacocoTestReport {
     reports {
-        xml.enabled true
-        csv.enabled false
-        html.enabled false
+        xml.required = true
+        csv.required = false
+        html.required = false
     }
 }
 
