JACOCO-37 Prevent Renovate from suggesting major upgrades of the Gradle wrapper

--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,17 @@
     "gradle-wrapper",
     "github-actions"
   ],
+  "packageRules": [
+    {
+      "matchManagers": [
+        "gradle-wrapper"
+      ],
+      "matchUpdateTypes": [
+        "minor",
+        "patch"
+      ]
+    }
+  ],
   "reviewers": [
     "team:quality-jvm-squad"
   ]
