--- a/renovate.json
+++ b/renovate.json
@@ -25,6 +25,31 @@
         "minor",
         "patch"
       ]
+    },
+    {
+      "matchManagers": [
+        "gradle"
+      ],
+      "matchPackageNames": [
+        "!org.sonarsource.api.plugin:sonar-plugin-api*"
+      ],
+      "matchUpdateTypes": [
+        "minor",
+        "patch"
+      ],
+      "groupName": "all non-major dependencies",
+      "groupSlug": "all-minor-patch"
+    },
+    {
+      "matchManagers": [
+        "gradle"
+      ],
+      "matchPackageNames": [
+        "org.sonarsource.api.plugin:sonar-plugin-api*"
+      ],
+      "groupName": "sonar-plugin-api",
+      "groupSlug": "sonar-plugin-api",
+      "prHeader": "**Before updating the plugin-api version, make sure to check the [compatibility matrix](https://github.com/SonarSource/sonar-plugin-api?tab=readme-ov-file#compatibility) and stick to the lowest denominator.**"
     }
   ],
   "reviewers": [
