JACOCO-37 Refine scheduling and rebasing strategy

--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,10 @@
   "extends": [
     "github>SonarSource/renovate-config:languages-team"
   ],
+  "schedule": [
+    "before 4am on Monday"
+  ],
+  "rebaseWhen": "conflicted",
   "enabledManagers": [
     "gradle",
     "gradle-wrapper",
