--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,19 +21,52 @@ jobs:
     permissions:
       id-token: write  # Required for Vault OIDC authentication
       contents: write  # Required for repository access and tagging
-    outputs:
-      build-number: ${{ steps.build-gradle.outputs.BUILD_NUMBER }}
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       - uses: jdx/mise-action@5ac50f778e26fac95da98d50503682459e86d566 # v3.2.0
         with:
           version: 2025.7.12
       - uses: SonarSource/ci-github-actions/build-gradle@v1
-        id: build-gradle
         with:
           deploy-pull-request: true
           artifactory-reader-role: private-reader
           artifactory-deployer-role: qa-deployer
+
+  qa:
+    needs: [build]
+    runs-on: github-ubuntu-latest-s
+    permissions:
+      id-token: write
+      contents: write
+    strategy:
+      fail-fast: false
+      matrix:
+        item:
+        - { SQ_VERSION: LATEST_RELEASE }
+        - { SQ_VERSION: DEV }
+
+    name: "QA Tests - SQ : ${{ matrix.item.SQ_VERSION }}"
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      - uses: jdx/mise-action@5ac50f778e26fac95da98d50503682459e86d566 # v3.2.0
+        with:
+          version: 2025.7.12
+      - name: Configure Gradle for QA
+        uses: SonarSource/ci-github-actions/config-gradle@v1
+        with:
+          artifactory-reader-role: private-reader
+      - name: Run QA Tests
+        shell: bash
+        env:
+          SQ_VERSION: ${{ matrix.item.SQ_VERSION }}
+        run: |
+          ./gradlew -DbuildNumber=$BUILD_NUMBER \
+            -PintegrationTests=true \
+            -Dsonar.runtimeVersion=$SQ_VERSION \
+            -Dorchestrator.artifactory.accessToken=$ARTIFACTORY_ACCESS_TOKEN \
+            --console plain --no-daemon --info \
+            build test
 
   # QA is broken due to JACOCO-56
 
