JACOCO-63 Update plugin QA matrix with supported versions of SQS
The tests should now run against SQS 2025.1 and 2025.4.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,8 +47,9 @@ jobs:
       fail-fast: false
       matrix:
         item:
-        - { sq-version: LATEST_RELEASE }
-        - { sq-version: DEV }
+        - { sq-version: "LATEST_RELEASE[2025.1]" }
+        - { sq-version: "LATEST_RELEASE[2025.4]" }
+        - { sq-version: "DEV" }
     name: "QA Tests - SQ : ${{ matrix.item.sq-version }}"
     env:
       BUILD_NUMBER: ${{ needs.build.outputs.build-number }}
