--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,12 +21,16 @@ jobs:
     permissions:
       id-token: write  # Required for Vault OIDC authentication
       contents: write  # Required for repository access and tagging
+    outputs:
+      build-number: ${{ steps.build.outputs.BUILD_NUMBER }}
+      deployed: ${{ steps.build.outputs.deployed }}
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       - uses: jdx/mise-action@5ac50f778e26fac95da98d50503682459e86d566 # v3.2.0
         with:
           version: 2025.7.12
       - uses: SonarSource/ci-github-actions/build-gradle@v1
+        id: build
         with:
           deploy-pull-request: true
           artifactory-reader-role: private-reader
@@ -34,31 +38,42 @@ jobs:
 
   qa:
     needs: [build]
-    runs-on: github-ubuntu-latest-s
+    if: ${{ needs.build.outputs.deployed }}
+    runs-on: github-ubuntu-latest-m
     permissions:
       id-token: write
-      contents: write
+      contents: read
     strategy:
       fail-fast: false
       matrix:
         item:
         - { SQ_VERSION: LATEST_RELEASE }
         - { SQ_VERSION: DEV }
-
     name: "QA Tests - SQ : ${{ matrix.item.SQ_VERSION }}"
+    env:
+      BUILD_NUMBER: ${{ needs.build.outputs.build-number }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       - uses: jdx/mise-action@5ac50f778e26fac95da98d50503682459e86d566 # v3.2.0
         with:
           version: 2025.7.12
-      - name: Configure Gradle for QA
-        uses: SonarSource/ci-github-actions/config-gradle@v1
+      - name: Get GitHub Token for Artifactory access
+        id: secrets
+        uses: SonarSource/vault-action-wrapper@320bd31b03e5dacaac6be51bbbb15adf7caccc32 # 3.1.0
         with:
+          secrets: |
+            development/artifactory/token/{REPO_OWNER_NAME_DASH}-private-reader access_token | ARTIFACTORY_ACCESS_TOKEN;
+      - name: Configure Gradle
+        uses: SonarSource/ci-github-actions/build-gradle@v1
+        with:
+          gradle-args: "-x build -x sonar -x artifactoryPublish"  # Skip everything to only configure Gradle and Artifactory access
           artifactory-reader-role: private-reader
+          artifactory-deployer-role: qa-deployer
       - name: Run QA Tests
         shell: bash
         env:
+          ARTIFACTORY_ACCESS_TOKEN: ${{ fromJSON(steps.secrets.outputs.vault).ARTIFACTORY_ACCESS_TOKEN }}
           SQ_VERSION: ${{ matrix.item.SQ_VERSION }}
         run: |
           ./gradlew -DbuildNumber=$BUILD_NUMBER \
@@ -68,21 +83,17 @@ jobs:
             --console plain --no-daemon --info \
             build test
 
-  # QA is broken due to JACOCO-56
-
   promote:
     needs: [build, qa]
+    if: ${{ needs.build.outputs.deployed }}
     runs-on: github-ubuntu-latest-s
     name: Promote
     permissions:
       id-token: write
       contents: write
+    env:
+      BUILD_NUMBER: ${{ needs.build.outputs.build-number }}
     steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-      - uses: jdx/mise-action@5ac50f778e26fac95da98d50503682459e86d566 # v3.2.0
-        with:
-          cache_save: false
-          version: 2025.7.12
       - uses: SonarSource/ci-github-actions/promote@v1
         with:
           promote-pull-request: true
