JACOCO-56 SONARJAVA-5813 Fix QA and add its job to GH Action (#134)

--- a/build.gradle
+++ b/build.gradle
@@ -177,7 +177,7 @@ signing {
   def signingPassword = findProperty("signingPassword")
   useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
   required {
-    def branch = System.getenv()["GITHUB_REF_NAME"] ?: System.getenv()["CIRRUS_BRANCH"]
+    def branch = System.getenv()["GITHUB_REF_NAME"]
     return (branch == 'master' || branch ==~ 'branch-[\\d.]+') &&
       gradle.taskGraph.hasTask(":artifactoryPublish")
   }
