--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,3 @@
-buildscript {
-  repositories {
-    maven {
-      url 'https://repox.jfrog.io/repox/plugins.gradle.org/'
-    }
-  }
-}
 plugins {
     id 'org.sonarqube' version '7.0.0.6105'
     id 'com.jfrog.artifactory' version '5.2.5'
@@ -39,15 +32,6 @@ tasks.withType(Javadoc) {
     options.addStringOption("tag", "javax.annotation.ParametersAreNonnullByDefault:ParametersAreNonnullByDefault")
 }
 
-allprojects {
-    repositories {
-        mavenCentral()
-        maven {
-            url "https://repox.jfrog.io/repox/sonarsource"
-        }
-    }
-}
-
 sonarqube {
     properties {
         property 'sonar.organization', 'sonarsource'
@@ -67,13 +51,13 @@ jacocoTestReport {
 test.finalizedBy jacocoTestReport
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-migrationsupport:5.6.2'
-    testImplementation 'org.mockito:mockito-core:4.9.0'
-    testImplementation 'org.assertj:assertj-core:3.10.0'
-    compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
-    compileOnly 'org.sonarsource.api.plugin:sonar-plugin-api:9.17.0.587'
-    testImplementation 'org.sonarsource.sonarqube:sonar-plugin-api-impl:9.7.1.62043'
+    testImplementation('org.junit.jupiter:junit-jupiter:5.6.2')
+    testImplementation('org.junit.jupiter:junit-jupiter-migrationsupport:5.6.2')
+    testImplementation('org.mockito:mockito-core:4.9.0')
+    testImplementation('org.assertj:assertj-core:3.10.0')
+    compileOnly('com.google.code.findbugs:jsr305:3.0.2')
+    compileOnly('org.sonarsource.api.plugin:sonar-plugin-api:9.17.0.587')
+    testImplementation('org.sonarsource.sonarqube:sonar-plugin-api-impl:9.7.1.62043')
 }
 
 test {
@@ -83,7 +67,7 @@ test {
 license {
     header = rootProject.file('LICENSE_HEADER')
     ext.year = Calendar.getInstance().get(Calendar.YEAR)
-    strictCheck true
+    strictCheck = true
     mapping {
       java = 'SLASHSTAR_STYLE'
       js = 'SLASHSTAR_STYLE'
@@ -127,12 +111,12 @@ jar {
 
 task sourcesJar(type: Jar) {
     from sourceSets.main.allJava
-    classifier = 'sources'
+    archiveClassifier = 'sources'
 }
 
 task javadocJar(type: Jar) {
     from javadoc
-    classifier = 'javadoc'
+    archiveClassifier = 'javadoc'
 }
 
 publishing {
@@ -176,7 +160,7 @@ signing {
   def signingKeyId = findProperty("signingKeyId")
   def signingPassword = findProperty("signingPassword")
   useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
-  required {
+  required = {
     def branch = System.getenv()["GITHUB_REF_NAME"]
     return (branch == 'master' || branch ==~ 'branch-[\\d.]+') &&
       gradle.taskGraph.hasTask(":artifactoryPublish")
