--- a/its/build.gradle
+++ b/its/build.gradle
@@ -5,13 +5,13 @@ plugins {
 description = 'SonarQube JaCoCo :: Integration Tests'
 
 dependencies {
-  testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
-  testImplementation 'org.junit.jupiter:junit-jupiter-migrationsupport:5.6.2'
-  testImplementation 'org.mockito:mockito-core:1.10.19'
-  testImplementation 'org.assertj:assertj-core:3.10.0'
-  testImplementation 'org.sonarsource.orchestrator:sonar-orchestrator-junit4:6.0.0.3852'
-  testImplementation 'org.sonarsource.sonarqube:sonar-ws:6.7'
-  testImplementation 'com.google.code.findbugs:jsr305:3.0.2'
+  testImplementation('org.junit.jupiter:junit-jupiter:5.6.2')
+  testImplementation('org.junit.jupiter:junit-jupiter-migrationsupport:5.6.2')
+  testImplementation('org.mockito:mockito-core:1.10.19')
+  testImplementation('org.assertj:assertj-core:3.10.0')
+  testImplementation('org.sonarsource.orchestrator:sonar-orchestrator-junit4:6.0.0.3852')
+  testImplementation('org.sonarsource.sonarqube:sonar-ws:6.7')
+  testImplementation('com.google.code.findbugs:jsr305:3.0.2')
 }
 
 test {
