--- a/its/build.gradle
+++ b/its/build.gradle
@@ -5,8 +5,10 @@ plugins {
 description = 'SonarQube JaCoCo :: Integration Tests'
 
 dependencies {
-  testImplementation('org.junit.jupiter:junit-jupiter:5.6.2')
-  testImplementation('org.junit.jupiter:junit-jupiter-migrationsupport:5.6.2')
+  testImplementation(platform('org.junit:junit-bom:5.6.2'))
+  testImplementation('org.junit.jupiter:junit-jupiter')
+  testImplementation('org.junit.jupiter:junit-jupiter-migrationsupport')
+  testRuntimeOnly('org.junit.platform:junit-platform-launcher')
   testImplementation('org.mockito:mockito-core:1.10.19')
   testImplementation('org.assertj:assertj-core:3.10.0')
   testImplementation('org.sonarsource.orchestrator:sonar-orchestrator-junit4:6.0.0.3852')
