--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ if (version.endsWith('-SNAPSHOT') && ext.buildNumber != null) {
 }
 
 compileJava {
-    // Setting the compatibility to Java 11 (https://docs.gradle.org/7.6.3/userguide/building_java_projects.html#sec:java_cross_compilation)
-    options.release = 11
+    // Setting the compatibility to Java 17
+    options.release = 17
 }
 
 tasks.withType(Javadoc) {
