--- a/its/src/test/resources/aggregate-and-module-based-mixed-coverage/library-test/pom.xml
+++ b/its/src/test/resources/aggregate-and-module-based-mixed-coverage/library-test/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>org.example</groupId>
-        <artifactId>aggregate-maven-project</artifactId>
+        <artifactId>aggregate-and-module-based-mixed-coverage</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
