--- a/its/src/test/resources/aggregate-and-module-based-mixed-coverage/pom.xml
+++ b/its/src/test/resources/aggregate-and-module-based-mixed-coverage/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>library</module>
+        <module>library-clash</module>
         <module>library-test</module>
         <module>report</module>
         <module>self-covered</module>
