--- a/its/src/test/resources/aggregate-and-module-based-mixed-coverage/pom.xml
+++ b/its/src/test/resources/aggregate-and-module-based-mixed-coverage/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>library</module>
         <module>library-clash</module>
+        <module>nested</module>
         <module>library-test</module>
         <module>report</module>
         <module>self-covered</module>
