--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
       - uses: jdx/mise-action@5ac50f778e26fac95da98d50503682459e86d566 # v3.2.0
         with:
           version: 2025.7.12
+          java: 17
       - uses: SonarSource/ci-github-actions/build-gradle@v1
         id: build-step
         with:
@@ -59,6 +60,7 @@ jobs:
       - uses: jdx/mise-action@5ac50f778e26fac95da98d50503682459e86d566 # v3.2.0
         with:
           version: 2025.7.12
+          java: 21
       - name: Configure Gradle
         uses: SonarSource/ci-github-actions/config-gradle@v1
         with:
