--- a/mise.toml
+++ b/mise.toml
@@ -1,3 +1,7 @@
 [tools]
-java = ["17.0", "21.0"]
+java = ["17", "21"]
 gradle = "9.2"
+
+[alias.java.versions]
+"17" = "corretto-17"
+"21" = "corretto-21"
