--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,10 @@ jobs:
           deploy-pull-request: true
           artifactory-reader-role: private-reader
           artifactory-deployer-role: qa-deployer
+      - name: Print java version
+        shell: bash
+        run: >-
+          java -version
 
   qa:
     needs: [build]
@@ -50,8 +54,8 @@ jobs:
       fail-fast: false
       matrix:
         item:
-        - { sq-version: "LATEST_RELEASE[2025.1]" }
-        - { sq-version: "LATEST_RELEASE[2025.4]" }
+        # - { sq-version: "LATEST_RELEASE[2025.1]" }
+        # - { sq-version: "LATEST_RELEASE[2025.4]" }
         - { sq-version: "DEV" }
     name: "QA Tests - SQ : ${{ matrix.item.sq-version }}"
     env:
@@ -74,24 +78,11 @@ jobs:
         env:
           SQ_VERSION: ${{ matrix.item.sq-version }}
         run: >-
+          export &&
+          java -version &&
           ./gradlew -DbuildNumber=$BUILD_NUMBER
           -PintegrationTests=true
           -Dsonar.runtimeVersion=$SQ_VERSION
           -Dorchestrator.artifactory.accessToken=$ARTIFACTORY_ACCESS_TOKEN
           --console plain --no-daemon --info
           build test
-
-  promote:
-    needs: [build, qa]
-    if: ${{ needs.build.outputs.deployed }}
-    runs-on: github-ubuntu-latest-s
-    name: Promote
-    permissions:
-      id-token: write
-      contents: write
-    env:
-      BUILD_NUMBER: ${{ needs.build.outputs.build-number }}
-    steps:
-      - uses: SonarSource/ci-github-actions/promote@v1
-        with:
-          promote-pull-request: true
