JACOCO-74 Import coverage for files whose name and package clashes across different nested modules
Collect sources for every module we traverse in order for the aggregate sensor to re-map properly source files in aggregate reports to files indexed by the scanner.

This sharing of information among sensors is necessary because:
1. Aggregate reports contain the name of the module, package and filename but lack the source directories where the package is declared
2. Information about source files and directories is not accessible at the project sensor level

--- a/its/src/test/resources/aggregate-and-module-based-mixed-coverage/pom.xml
+++ b/its/src/test/resources/aggregate-and-module-based-mixed-coverage/pom.xml
@@ -11,6 +11,8 @@
 
     <modules>
         <module>library</module>
+        <module>library-clash</module>
+        <module>nested</module>
         <module>library-test</module>
         <module>report</module>
         <module>self-covered</module>
